RESOLVED FIXED306766
REGRESSION(266411@main): [WPE][GTK] `mousemove` events are not throttle to one per rendering update
https://bugs.webkit.org/show_bug.cgi?id=306766
Summary REGRESSION(266411@main): [WPE][GTK] `mousemove` events are not throttle to on...
Vitaly Dyackhov
Reported 2026-02-02 06:42:42 PST
After 266411@main, it's possible to get generate than 60 mouse move events on 60Hz monitor on https://www.vsynctester.com/testing/mouse.html using WPE. Note, it works fine using WebKitGTK because GTK throttles move events by itself.
Attachments
Vitaly Dyackhov
Comment 1 2026-02-02 06:51:58 PST
EWS
Comment 2 2026-02-12 09:20:31 PST
Committed 307370@main (548162624138): <https://commits.webkit.org/307370@main> Reviewed commits have been landed. Closing PR #57692 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-12 09:21:13 PST
Note You need to log in before you can comment on or make changes to this bug.